--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,10 +38,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="index.css">
 </head>
 <body class="transition-colors duration-300">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="index.tsx"></script>
 </body>
 </html>
