--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="index.css">
 </head>
 <body class="transition-colors duration-300">
     <div id="root"></div>
-<script type="module" src="index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
